added /mongodb to .gitignore

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beautiful Landing Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Dev Tips</title>
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
 <header class="header">
@@ -14,15 +14,15 @@
 <section class="features">
     <div class="feature">
         <h2>Java Tip</h2>
-        <p>Loading...</p>
+        <p th:text="${javaTip}">Loading...</p>
     </div>
     <div class="feature">
         <h2>Python Tip</h2>
-        <p>Loading...</p>
+        <p th:text="${pythonTip}">Loading...</p>
     </div>
     <div class="feature">
         <h2>Design Tip</h2>
-        <p>Loading...</p>
+        <p th:text="${designTip}">Loading...</p>
     </div>
 </section>
 <footer class="footer">
