--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,7 +22,7 @@
     </div>
 </section>
 <footer class="footer">
-    <p>edwinsoto@tipoftheday.com</p>
+    <a href="https://github.com/esoto6">esoto6</a>
 </footer>
 </body>
 </html>
